# GD32H737VMT6_CmakeDemo

./: README.md
GD32H737Demo/: DEMO.code-workspace  gd32h7xx_flash.ld
GD32H737Demo/components/BSP/: CMakeLists.txt
GD32H737Demo/components/BSP/led/: led.c
GD32H737Demo/components/Middlewares/: CMakeLists.txt
GD32H737Demo/src/app/: main.c
GD32H737Demo/src/driver/: startup_gd32h737vmt6.c  startup_gd32h737vmt6.h
GD32H737_FreeRtos_LVGL/: CMakeLists.txt
GD32H737_FreeRtos_LVGL/cmake/: cortex_m7.cmake
GD32H737_FreeRtos_LVGL/components/BSP/: CMakeLists.txt
GD32H737_FreeRtos_LVGL/components/BSP/lcd/: ctiic.c  ctiic.h  gt9xxx.c  gt9xxx.h  lcd.c  lcd.h  lcd_ex.c  lcd_ex.h  lcdfont.h  touch.c  touch.h
GD32H737_FreeRtos_LVGL/components/BSP/led/: led.h
GD32H737_FreeRtos_LVGL/components/BSP/mpu/: mpu.h
GD32H737_FreeRtos_LVGL/components/BSP/norflash/: norflash.c  norflash.h
GD32H737_FreeRtos_LVGL/components/BSP/qspi/: qspi.c  qspi.h
GD32H737_FreeRtos_LVGL/components/BSP/sys/: sys.c  sys.h
GD32H737_FreeRtos_LVGL/components/BSP/timer/: timer.c
GD32H737_FreeRtos_LVGL/components/BSP/usart/: usart.c
GD32H737_FreeRtos_LVGL/components/BSP/watchdog/: wwdg.h
GD32H737_FreeRtos_LVGL/components/Middlewares/: CMakeLists.txt
GD32H737_FreeRtos_LVGL/components/Middlewares/FreeRtos/config/: FreeRTOSConfig.h
GD32H737_FreeRtos_LVGL/components/Middlewares/LVGL/GUI/lvgl/: lv_conf.h
GD32H737_FreeRtos_LVGL/components/Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
GD32H737_FreeRtos_LVGL/src/app/: main.c
GD32H737_FreeRtos_LVGL/src/driver/: CMakeLists.txt  sdk_init.c  system_gd32h7xx.c
(+12 files in other folders)
